<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:title="edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_background_image"
        android:title="@string/add_background_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_edit_category"
        android:title="@string/menu_edit_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_setup_class_with_sheet"
        android:title="@string/menu_setup_class_with_sheet"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_setup_course_with_sheet"
        android:title="@string/menu_setup_courses_with_sheet"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_account"
        android:title="@string/menu_delete_account"
        app:showAsAction="never" />

</menu>