<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/colorCyan500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/teacher_detail_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/place_holder"
            app:civ_border_color="@color/colorCyan200"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:textColor="#FFffffff"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            tools:text="SS3 - Science" />

        <TextView
            android:id="@+id/requirers_exam_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/dialog_title_requires_exam"
            android:textColor="@color/colorCyan500"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toStartOf="@+id/class_detail_requires_exam_checkBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_detail_image_view" />

        <CheckBox
            android:id="@+id/class_detail_requires_exam_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/requirers_exam_header"
            app:layout_constraintEnd_toEndOf="@+id/teacher_detail_image_view"
            app:layout_constraintTop_toBottomOf="@+id/requirers_exam_header" />

        <Button
            android:id="@+id/add_class_courses"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/curved_rectangle_cyan_200"
            android:text="@string/dialog_button_add_course"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_exam_courses"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/curved_rectangle_cyan_200"
            android:text="@string/dialog_button_exam_courses"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>
</layout>